Fix for the double scrollbar issue.

--- a/stylesheets/stylesheet.scss
+++ b/stylesheets/stylesheet.scss
@@ -78,7 +78,7 @@ footer {
 }
 
 .box {
-  bottom: 0; /* increase for footer use */
+  //bottom: 0; /* increase for footer use */
   left: 0;
   position: absolute;
   right: 0;
